output/v2_0_training_log.txt
  File "/home/user/BK_Build/train_ball_knower_v2_0.py", line 517
    """)
       ^
SyntaxError: f-string: single '}' is not allowed
